# ZoKrates

./: Cargo.toml
zokrates_common/src/: helpers.rs
zokrates_mobile/: Cargo.toml  build.rs  uniffi.toml
zokrates_mobile/src/: lib.rs  zokrates.udl
